--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -73,7 +73,7 @@ jobs:
           sudo mv sonar-scanner-cli-6.2.1.4610-linux-x64 /opt/sonar-scanner
           echo 'export PATH=$PATH:/opt/sonar-scanner/bin' >> ~/.bashrc
           source ~/.bashrc
-          sonar-scanner -v
+          sonar-scanner --version
           #sudo ln -s /opt/sonar-scanner-cli-7.0.1.4817-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner
 
       - name: SonarCloud authentication
