--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -21,6 +21,12 @@ jobs:
       # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      # Install Java 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
 
       # Set up .NET
       - name: Set up .NET
