--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
+          distribution: 'adoptopenjdk'  # or 'zulu', 'amazon', etc.
+          architecture: x64 
 
       # Set up .NET
       - name: Set up .NET
