--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adoptopenjdk'  # or 'zulu', 'amazon', etc.
+          distribution: 'amazon'  # or 'zulu', 'amazon', etc.
           architecture: x64 
 
       # Set up .NET
