--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -22,13 +22,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      # Install Java 17
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'zulu'  # or 'adoptopenjdk', 'amazon', etc.
-          architecture: x64 
+      # Install Java 17 explicitly
+      - name: Install OpenJDK 17
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-17-jdk
+          java -version
+          
+      # Set JAVA_HOME to Java 17
+      - name: Set JAVA_HOME
+        run: echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
 
       # Set up .NET
       - name: Set up .NET
@@ -55,7 +58,7 @@ jobs:
         env:
           DOTNET_ROOT: /usr/share/dotnet
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          JAVA_HOME: /opt/hostedtoolcache/Java_Zulu_jdk/17.0.14-7/x64  # Set Java 17 explicitly
+          JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64  # Set Java 17 explicitly
 
       # Run unit tests (optional, but recommended)
       - name: Run unit tests
