--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      # Install Java 17 explicitly
-      - name: Install OpenJDK 17
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-17-jdk
-          java -version
+      #install java 17  
+      - name: Set up JDK 17
+        uses: sonarsource/sonarcloud-github-c-cpp@v2
+        with:
+          java-version: 17
+          
           
       # Set JAVA_HOME to Java 17
       - name: Set JAVA_HOME
