--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,18 +36,20 @@ jobs:
       - name: Build the project
         run: dotnet build --configuration Release
 
-      - name: Run SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1
-        with:
-          organization: ${{ secrets.SONAR_ORG }}  # Your SonarCloud organization
-          projectKey: ${{ secrets.SONAR_PROJECT_KEY }}  # Your SonarCloud project key
-          projectName: 'Expense-Tracker-App-in-Asp.Net-Core-MVC'  # Project name in SonarCloud
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Your SonarCloud token (stored as a secret)
-          
-      - name: Publish code coverage results
-        if: success() && github.event_name == 'push'
+       # Run tests and generate code coverage report in Cobertura format
+      - name: Run tests with coverage
         run: |
-          #This is optional and should only be included if you're generating code coverage reports.
-          dotnet test --configuration Release --no-build --collect:"XPlat Code Coverage"
-          bash <(curl -s https://codecov.io/bash)
+          dotnet test --configuration Release --collect:"XPlat Code Coverage"
+          # Convert coverage to cobertura format
+          coverlet ./bin/Release/net6.0/YourProjectName.dll --target "dotnet" --targetargs "test ./YourProjectName.csproj" --format cobertura --output ./coverage.cobertura.xml
+
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+#            GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+              -Dsonar.organization=${{ secrets.SONAR_ORG }}
+              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+              -Dsonar.dotnet.coverage.reportPaths=coverage.cobertura.xml
