--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,14 +31,10 @@ jobs:
       # Restore dependencies
       - name: Restore dependencies
         run: dotnet restore
-
         
+      #Build the project
       - name: Build the project
-        run: dotnet build --configuration Release --framework net7.0  
-        
-      # Build the project
-     # - name: Build the project
-      #  run: dotnet build --configuration Release
+        run: dotnet build --configuration Release
 
        # Install coverlet tool
       - name: Install coverlet tool
