--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -41,11 +41,11 @@ jobs:
         run: dotnet tool install --global coverlet.console
 
        # Run tests and generate code coverage report in Cobertura format
-      - name: Run tests with coverage
-        run: |
-          dotnet test --configuration Release --collect:"XPlat Code Coverage" --logger:"trx;LogFileName=test_results.trx"
-          COVERAGE_OUTPUT="./bin/Release/net7.0"  # Adjust this based on your .NET version
-          coverlet $COVERAGE_OUTPUT/Expense-Tracker-App-in-Asp.Net-Core-MVC.dll --target "dotnet" --targetargs "test ./Expense-Tracker-App-in-Asp.Net-Core-MVC.csproj" --format cobertura --output ./coverage.cobertura.xml
+      #- name: Run tests with coverage
+       # run: |
+        #  dotnet test --configuration Release --collect:"XPlat Code Coverage" --logger:"trx;LogFileName=test_results.trx"
+         # COVERAGE_OUTPUT="./bin/Release/net7.0"  # Adjust this based on your .NET version
+         # coverlet $COVERAGE_OUTPUT/Expense-Tracker-App-in-Asp.Net-Core-MVC.dll --target "dotnet" --targetargs "test ./Expense-Tracker-App-in-Asp.Net-Core-MVC.csproj" --format cobertura --output ./coverage.cobertura.xml
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
